# today-vn-news

./: .coveragerc  .env.example  .geminiignore  .gitignore  CHANGELOG.md  ContextFile.md  GEMINI.md  LICENSE  QWEN.md  README.md  ROADMAP.md  SAMPLE.md  TODO.md  config.yaml  main.py  pyproject.toml  requirements.txt
.ai/: AGENTS.md  AI.ignore  CONTEXT.md
.github/: dependabot.yml
.github/workflows/: daily-pipeline.yml
.omc/: project-memory.json
.omc/sessions/: 2f7ff732-c1e7-4608-9cbe-c75791f0ccad.json  6b54d36f-db63-49e5-8a46-9afac7f8b385.json  8b793101-c41e-4040-ba9e-afc3747fe950.json  e208aa6a-b68d-44e8-a587-c6e59adce7a9.json
.omc/state/: agent-replay-0ff0480b-9414-4311-b598-68808fe1c8bf.jsonl  agent-replay-2f7ff732-c1e7-4608-9cbe-c75791f0ccad.jsonl  agent-replay-6b54d36f-db63-49e5-8a46-9afac7f8b385.jsonl  agent-replay-8b793101-c41e-4040-ba9e-afc3747fe950.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
docs/: DOCUMENTATION.md  QWEN_QUICK_TEST.md  QWEN_TTS_TEST_GUIDE.md  ROADMAP.md  task.md  tts.md
docs/plans/: 2026-02-27-system-optimization-design.md  2026-02-27-system-optimization-implementation.md
docs/superpowers/plans/: 2026-03-21-aperture-integration.md  2026-03-22-video-source-priority-plan.md  2026-03-24-pushover-notification.md  2026-03-25-filename-simplification-plan.md
docs/walkthroughs/: v0.1.0_initial_setup_and_policy.md  v0.3.0_video_and_tts_engine.md  v0.4.0_deployment_and_sources.md  v0.5.0_api_migration.md
scripts/: test_pushover_real.py
tests/: ab_test_gemma4.py  conftest.py  debug_gemini.py  test_models.py  test_pipeline.py  test_translator.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: config.yaml  sample_news.json  sample_translated.yaml
tests/integration/: test_done_file_verification.py  test_pipeline.py  test_pushover_integration.py
tests/unit/: test_engine.py  test_exceptions.py  test_media_archiver.py  test_qwen_quick.py  test_qwen_voices.py  test_scraper.py  test_timestamp.py  test_translator.py  test_tts.py  test_tts_qwen.py  test_uploader.py  test_video_config.py  test_video_source_resolver.py
today_vn_news/: __init__.py  collector.py  engine.py  exceptions.py  logger.py  retry.py  scraper.py  timestamp.py  translator.py  tts.py  uploader.py
today_vn_news/config/: __init__.py  video_config.py
today_vn_news/notifications/: __init__.py  pipeline_status.py  pushover.py
today_vn_news/tts/: __init__.py  edge.py  qwen.py
today_vn_news/video_source/: __init__.py  archiver.py  resolver.py
(+9 files in other folders)
