[project]
name = "today-vn-news"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.7",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai==1.56.0",
    "python-dotenv>=1.2.1",
    "pyyaml==6.0.3",
    "requests>=2.32.5",
]
