[project]
name = "today-vn-news"
version = "0.6.2"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.7",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai==1.56.0",
    "python-dotenv>=1.2.1",
    "pyyaml==6.0.3",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
qwen = [
    "qwen-tts>=0.1.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
# Qwen3-TTS 0.6B CustomVoice 모델
# - 메모리: 약 2-3GB (1.7B 대비 60% 감소)
# - Mac M4 최적화
# - 9 개 프리미엄 음성 지원

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short -W ignore::DeprecationWarning"
asyncio_mode = "auto"
markers = [
    "integration: 통합 테스트",
    "unit: 단위 테스트",
    "slow: 느린 테스트 (실제 외부 API 호출)",
    "upload: 유튜브 업로드 테스트 (실제 업로드)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
]
